# agent-job-matcher

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GRAPH_REPORT.md  README.md  RUNBOOK.md  docker-compose.yaml  graph-index.json  graph-manifest.json  graph.html  graph.json  mkdocs.yml
backend/: AGENTS.md  CHANGELOG.md  OpenDLC_Mob_Inception_AI_Job_Fit_Matching_Agent.md  README.md  app.py  cli.py  docker-compose.yaml  job_fit_from_files.py  pyproject.toml  requirements-job-fit.txt
backend/evals/: rubrics.md
backend/job_matcher/: __init__.py  analyze.py  api.py  candidate.py  cli.py  config.py  fetch.py  jsonresume.py  logging.py  pipeline.py  prompts.py  report.py  resume.py  schemas.py  scoring.py
backend/job_matcher/observability/: __init__.py  otel_bridge.py  sinks.py
backend/job_matcher/prompts/: analysis_system.txt  analysis_user.txt  (+3 more)
backend/json-flows/: job-fit-match-openai-source.json  practitest-chat-bot-ollama-full.json  practitest-chat-bot-ollama.json  practitest-chat-bot-openai-full.json  practitest-generate-embeddings-ollama.json  semantic-search-ollama.json  semantic-search-openai.json
backend/prompts/: analysis_prompt.txt  system_prompt.txt
backend/templates/: cover_letter.html  cover_letter.txt
backend/tests/: test_api.py  test_candidate.py  test_cover_letter.py  test_embeddable_core.py  test_fetch_guards.py  test_jsonresume.py  test_match_banding.py  test_observability.py  test_openapi_docs.py  test_pipeline_offline.py  test_resume_extraction.py  test_schema_conformance.py  test_scoring_determinism.py  test_slug_naming.py  test_telemetry_backends.py
(+94 files in other folders)
